--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,12 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
+  ],
+  "routes": [
+    {
+      "src": "/api/todoist/(.*)",
+      "dest": "https://api.todoist.com/$1",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+    }
   ]
 }
